<resources>
    <string name="app_name">Auto filala</string>
    <string name="start">اضغط هنا للبدأ</string>
    <string name="connect">تم الاتصال</string>
    <string name="theorique">الامتحان النظري pdf</string>
    <string name="rights">جميع الحقوق محفوظة 2022</string>
    <string name="title_activity_app">App_Activity</string>
    <string name="series_button">سلاسل التعلم</string>
    <string name="exper">إمتحان تجريبي</string>
    <string name="explanation">شرح السلاسل</string>
    <string name="theory">دروس نظرية</string>
    <string name="route_signs">التشوير الطرقي</string>
    <string name="serie_number">(pdf) %1$d السلسلة رقم </string>
    <string name="expl_serie_number"> %1$d السلسلة رقم </string>
    <string name="results">%1$d/40</string>
    <string name="settings">اعدادات</string>
    <string name="pdf">pdfتحميل ملفات ال</string>
    <string name="delete_temporary">مسح الملفات المؤقتة</string>
    <string name="share_application">مشاركة التطبيق</string>
    <string name="update_ressources">تحديث المعطيات</string>
    <string name="update_application">تحديث التطبيق</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sum">مجموع الامتحانات :</string>
    <string name="mean">متوسط معدلات النجاح :</string>
    <string name="succes">مجموع الامتحانات التي نجحت(ي) فيها:</string>
    <string name="failures">مجموع الامتحانات التي لم تنجح(ي) فيها:</string>
    <string name="exam">امتحان السياقة</string>
    <string name="set">اعداد الامتحان</string>
    <string name="re_set">اعادة التهيأة</string>
    <string name="time_left">الوقت المتبقي</string>
    <string name="response">الاجوبة</string>
    <string name="_00_40"> %1$d/40 : النتيجة</string>
    <string name="right_answers">الاجوبة الصحيحة</string>
</resources>