<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AppActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/series_rv"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/seriesImage"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="?android:attr/actionModeFindDrawable" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seriesImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/series_button"
                android:textColor="@color/beautiful_red" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/experimental_rv"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/experimentalImage"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/experimentalImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/exper"
                android:textColor="@color/beautiful_red"
                android:textSize="13sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/explanation_rv"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/explanationImage"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@android:drawable/ic_menu_info_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/explanationImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/explanation"
                android:textColor="@color/beautiful_red" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/theory_rv"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/theoryImage"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@android:drawable/ic_menu_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/theoryImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/theory"
                android:textColor="@color/beautiful_red" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/routeSigns_rv"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/routeSignsImage"
                android:layout_width="61dp"
                android:layout_height="52dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@android:drawable/presence_busy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/routeSignsImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/route_signs"
                android:textColor="@color/beautiful_red" />

        </RelativeLayout>
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>